// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-nf258e soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="cclkn2 soui-switch-indicator"
  />
  <div
    class="c-y2gt94 soui-switch-content"
  >
    <div
      class="c-o0oc8d soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-nf258e soui-switch-wrapper c-hfjmpn soui-switch-wrapper-checked c6xa3ry soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cclkn2 soui-switch-indicator"
    >
      <div
        class="cqsk88b soui-switch-loading"
      />
    </div>
    <div
      class="c-y2gt94 soui-switch-content"
    >
      <div
        class="c-o0oc8d soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-nf258e soui-switch-wrapper c6xa3ry soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cclkn2 soui-switch-indicator"
    >
      <div
        class="cqsk88b soui-switch-loading"
      />
    </div>
    <div
      class="c-y2gt94 soui-switch-content"
    >
      <div
        class="c-o0oc8d soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-nf258e soui-switch-wrapper c-dtc5i3 soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cclkn2 soui-switch-indicator"
    />
    <div
      class="c-y2gt94 soui-switch-content"
    >
      <div
        class="c-o0oc8d soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-nf258e soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cclkn2 soui-switch-indicator"
    />
    <div
      class="c-y2gt94 soui-switch-content"
    >
      <div
        class="c-o0oc8d soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-nf258e soui-switch-wrapper c-dxe10n soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cclkn2 soui-switch-indicator"
    />
    <div
      class="c-y2gt94 soui-switch-content"
    >
      <div
        class="c-o0oc8d soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-nf258e soui-switch-wrapper c-hfjmpn soui-switch-wrapper-checked c6xa3ry soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cclkn2 soui-switch-indicator"
    />
    <div
      class="c-y2gt94 soui-switch-content"
    >
      <div
        class="c-o0oc8d soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-nf258e soui-switch-wrapper c6xa3ry soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cclkn2 soui-switch-indicator"
    />
    <div
      class="c-y2gt94 soui-switch-content"
    >
      <div
        class="c-o0oc8d soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
